--- a/Web3_Nodes.ipynb
+++ b/Web3_Nodes.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPaE2fEYlX9g013g+nRYOQ8",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -27,6 +11,43 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "background_save": true,
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NHHQjMm3X5f0",
+        "outputId": "93c0a31b-269e-4882-9d20-af84f592debf"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Collecting thefuzz\n",
+            "  Downloading thefuzz-0.22.1-py3-none-any.whl.metadata (3.9 kB)\n",
+            "Collecting rapidfuzz<4.0.0,>=3.0.0 (from thefuzz)\n",
+            "  Downloading rapidfuzz-3.13.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (12 kB)\n",
+            "Downloading thefuzz-0.22.1-py3-none-any.whl (8.2 kB)\n",
+            "Downloading rapidfuzz-3.13.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.1 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m24.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: rapidfuzz, thefuzz\n",
+            "Successfully installed rapidfuzz-3.13.0 thefuzz-0.22.1\n",
+            "Collecting python-Levenshtein\n",
+            "  Downloading python_levenshtein-0.27.1-py3-none-any.whl.metadata (3.7 kB)\n",
+            "Collecting Levenshtein==0.27.1 (from python-Levenshtein)\n",
+            "  Downloading levenshtein-0.27.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (3.6 kB)\n",
+            "Requirement already satisfied: rapidfuzz<4.0.0,>=3.9.0 in /usr/local/lib/python3.11/dist-packages (from Levenshtein==0.27.1->python-Levenshtein) (3.13.0)\n",
+            "Downloading python_levenshtein-0.27.1-py3-none-any.whl (9.4 kB)\n",
+            "Downloading levenshtein-0.27.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (161 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m161.7/161.7 kB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: Levenshtein, python-Levenshtein\n",
+            "Successfully installed Levenshtein-0.27.1 python-Levenshtein-0.27.1\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install thefuzz\n",
         "!pip install python-Levenshtein\n",
@@ -102,43 +123,24 @@
         "\n",
         "# Run the chatbot\n",
         "web3()"
-      ],
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NHHQjMm3X5f0",
-        "outputId": "dd423402-8ce6-48c5-af6f-d8415e0b1039"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting thefuzz\n",
-            "  Downloading thefuzz-0.22.1-py3-none-any.whl.metadata (3.9 kB)\n",
-            "Collecting rapidfuzz<4.0.0,>=3.0.0 (from thefuzz)\n",
-            "  Downloading rapidfuzz-3.13.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (12 kB)\n",
-            "Downloading thefuzz-0.22.1-py3-none-any.whl (8.2 kB)\n",
-            "Downloading rapidfuzz-3.13.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m24.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: rapidfuzz, thefuzz\n",
-            "Successfully installed rapidfuzz-3.13.0 thefuzz-0.22.1\n",
-            "Collecting python-Levenshtein\n",
-            "  Downloading python_levenshtein-0.27.1-py3-none-any.whl.metadata (3.7 kB)\n",
-            "Collecting Levenshtein==0.27.1 (from python-Levenshtein)\n",
-            "  Downloading levenshtein-0.27.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (3.6 kB)\n",
-            "Requirement already satisfied: rapidfuzz<4.0.0,>=3.9.0 in /usr/local/lib/python3.11/dist-packages (from Levenshtein==0.27.1->python-Levenshtein) (3.13.0)\n",
-            "Downloading python_levenshtein-0.27.1-py3-none-any.whl (9.4 kB)\n",
-            "Downloading levenshtein-0.27.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (161 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m161.7/161.7 kB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: Levenshtein, python-Levenshtein\n",
-            "Successfully installed Levenshtein-0.27.1 python-Levenshtein-0.27.1\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPaE2fEYlX9g013g+nRYOQ8",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
